# advent-of-ai

./: README.md
backend-rs/: .gitignore  Cargo.toml  README.md  run_migrations.sh
backend-rs/migrations/: 000000_init.sql  000001_add_completion.sql  000002_add_task.sql
backend-rs/src/: agent.rs  auth.rs  check.rs  completion.rs  dtos.rs  error.rs  handler.rs  health_check.rs  main.rs  model.rs  route.rs  task.rs  task_old.rs  traits.rs  types.rs
bruno/advent-of-ai/: Check task.bru  Create agent.bru  Create task.bru  Delete agent.bru  Delete task.bru  Get agent.bru  Get agents.bru  Get all agents.bru  Get task local.bru  Get task.bru  Get tasks (admin).bru  Get tasks.bru  Health check.bru  Ollama.bru  Patch agent.bru  Patch task (admin).bru  Reset.bru  bruno.json  collection.bru
simple-bot-py/: .gitignore  main.py
solver-rs/: Cargo.toml
solver-rs/src/: main.rs  main_template.rs
